--- a/estilo.css
+++ b/estilo.css
@@ -1,25 +1,214 @@
+body {
+    margin: 0;
+    background-color: black;
+    font-family: monospace;
+}
+
+/* Começo do Cabeçalho */
+
+.header {
+    border-bottom: 3px solid aqua;
+}
+
+.container {
+    display: flex;
+    margin: auto;
+    width: 80%;
+}
+
+.header .container {
+    justify-content: space-between;
+}
+
+.navBar .aqui {
+    font-weight: bolder;
+}
+
 .titulo {
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 36px;
     color: aqua;
-    font-weight: 200;
+    width: fit-content;
 }
 
-.subtitulo {
-    font-family: 'Courier New', Courier, monospace;
+.navBar {
+    font-size: 18px;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0px;
+    color: white;
+    width: 400px;
+    align-items: center;
 }
 
-.paragrafo {
-    font-family: 'Courier New', Courier, monospace;
+.navBar .aqui {
+    font-weight: bolder;
 }
 
-.destaque {
-    font-family: 'Courier New', Courier, monospace;
-    color: aqua;
+.navBar a {
+    text-decoration: none;
+    color: white;
 }
 
-#box{
-    width: 50px ;
-    height: 50px;
-    background-color: cyan;
-    border-radius: 5px 5px 5px 0px ;
+/* Fim do Cabeçalho */
+
+/* Começo do Banner - Home */
+
+.banner {
+    background-image: url("imgs/bg-jelly-fish-para-home.png");
+    color: white;
+    height: 500px;
+    display: flex;
+}
+
+.banner .container p span {
+    font-weight: bolder;
+}
+
+.banner .container {
+    font-size: 38px;
+    justify-content: center;
+}
+
+.banner .container p {
+    width: 20%;
+}
+
+/* Fim do Banner - Home */
+
+/* Começo do Banner - Login */
+
+.card-l {
+    background-color: white;
+    height: 370px;
+    width: 400px;
+    color: rgb(0, 0, 75);
+    border-radius: 7px;
+}
+
+.card_t {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card_t h1 {
+    font-size: 30px;
+}
+
+.card_t h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.card_t input {
+    border: 2px solid rgb(0, 0, 75);
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.card_t a {
+    font-size: 16px;
+    margin: 5px;
+    margin-top: 15px;
+    text-decoration: none;
+    color: navy;
+}
+
+.card_t button {
+    background-color: rgb(0, 0, 75);
+    color: white;
+    cursor: pointer;
+    font-size: 18px;
+    height: 40px;
+    width: 100px;
+    margin: 5px;
+    border: none;
+    border-radius: 4px;
+    font-family: monospace;
+}
+
+
+/* Fim do Banner - Login */
+
+/* Começo do Banner - Cadastro */
+
+.card_c {
+    background-color: white;
+    height: 350px;
+    width: 500px;
+    color: rgb(0, 0, 75);
+    border-radius: 7px;
+}
+
+.separacao{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 15px;
+}
+
+.left {
+    padding-right: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-right: 1px solid lightblue;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-left: 15px;
+}
+/* Fim do Banner - Cadastro */
+
+/* Começo do Social */
+
+.social {
+    background-color: white;
+    display: flex;
+}
+
+.social .container .boxes {
+    display: flex;
+}
+
+.social .container .boxes .box {
+    margin: 40px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.social .container .boxes .box img {
+    width: 200px;
+}
+
+.social .container .boxes .box h4 {
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+.social .container .boxes .box p {
+    font-size: 15px;
+}
+
+/* Fim do Social */
+
+/* Começo do Footer */
+
+.footer {
+    background-color: aqua;
+    height: 150px;
+    color: white;
+    display: flex;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer .container {
+    justify-content: center;
 }
